Comp 2012 - Lab 6/Lab6/err_msg.txt
src/boss.cpp:12:13: error: cannot cast 'const Cook' to its protected base class 'const Person'
    says_to(cook, "Work harder or you will get fired!");
            ^
src/../include/cook.h:9:14: note: declared protected here
class Cook : protected Person   //Change from protected to public inheritance for Task 1
             ^~~~~~~~~~~~~~~~
1 error generated.
Undefined symbols for architecture x86_64:
  "Boss::Boss(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >)", referenced from:
      _main in 4_boss_meet-fdf659.o
  "Boss::meet(Cook const&) const", referenced from:
      _main in 4_boss_meet-fdf659.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
